--- a/src/styles/tablet.css
+++ b/src/styles/tablet.css
@@ -57,8 +57,8 @@
   }
 }
 
-/* Ajustements spécifiques pour le Samsung Tab S10 Ultra */
-@media (min-width: 900px) and (max-width: 2000px) and (min-height: 1800px) {
+/* Ajustements spécifiques pour les grands écrans (tablettes et grands téléphones comme Samsung S10 Ultra et S25 Ultra) */
+@media (min-width: 900px) and (max-width: 4000px) and (min-height: 1400px) {
   html {
     font-size: 22px !important;
   }
